--- a/react-dashboard/package.json
+++ b/react-dashboard/package.json
@@ -11,10 +11,10 @@
     "test": "jest --coverage"
   },
   "dependencies": {
-    "next": "14.2.0",
+    "@octokit/rest": "^21.0.2",
+    "next": "^14.2.29",
     "react": "18.3.0",
-    "react-dom": "18.3.0",
-    "@octokit/rest": "^21.0.2"
+    "react-dom": "18.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
